fix: wishList fix Flex-wrap

--- a/src/styles/Favourites.module.scss
+++ b/src/styles/Favourites.module.scss
@@ -143,6 +143,7 @@
 
     .Fav {
       display: flex;
+      flex-wrap: wrap;
       gap: 20px;
       .Card {
         width: 300px;
